  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting

------------------------------------------------------------------------------
??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
        manuel.nuno.melo

  * 0.11.0

  Enhancements
  * Tests can now detect memleaks on a per-test basis (Issue #323)
  * AtomGroups can now be pickled/unpickled (Issue #293)
  * Universes can have a __del__ method (not actually added) without
    leaking (Issue #297)
  * Added reading of DL_Poly format CONFIG and HISTORY files (Issue #298)
    These can both act as both Topology and Coordinate information
  * Timestep objects now have __eq__ method
  * coordinates.base.Timestep now can handle velocities and forces
  * Waterdynamics analysis module added, including five analysis classes: Hydrogen Bond
    Lifetimes, Water Orientational Relaxation, Angular Distribution, Mean Square 
    Displacement and Survival Probability. Documentation and test are included.
  * RMSF class added to rms analysis module
  * ProgressMeter now outputs every *interval* number of ``update`` calls

  Changes
  * A ProtoReader class intermediate between IObase and Reader was added so
    specific Readers can be subclassed without __del__ (the ChainReader and
    SingleFrameReader), thus preventing memleaks (Issue #312).
  * Atoms (and all container classes thereof) are now bound to Universes
    only via weakrefs. If Universes are not explicitly kept in scope Atoms
    will become orphaned.
  * Timestep can now only init using an integer argument (which
    represents the number of atoms)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep
  * Removed FormatError, now replaced by ValueError
  * distances.contact_matrix(): changed keyword 'suppress_progmet' to
    'quiet'