@@ -57,7 +57,7 @@ Chronological list of authors
   - Caio S. Souza
   - Sean L. Seyler
   - David L. Dotson
-
+  - Carlos Yanez S.
 
 External code
 -------------
