@@ -11,7 +11,7 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 ??/??/15  tyler.je.reddy, richardjgowers, alejob, orbeckst, dotsdl,
-        manuel.nuno.melo
+        manuel.nuno.melo, cyanezstange
 
   * 0.11.0
 
@@ -58,6 +58,8 @@ The rules for this file:
   * Fixed TRZWriter failing when passed a non TRZTimestep (Issue #302)
   * relative imports are now banned in unit testing modules
     (Issue #189)
+  * Fixed bug and added DivisionByZero exception in analysis/waterdinamics.py 
+    in SurvivalProbability.
 
 
 06/01/15  richardjgowers, caio s. souza, manuel.nuno.melo, orbeckst, 
